--- a/flutter/20.04.2.md
+++ b/flutter/20.04.2.md
@@ -154,7 +154,7 @@ Countly.enableParameterTamperingProtection("salt");</code></pre>
     Location: Comma separate latitude and longitude values, for example "56.42345,123.45325"
   </li>
   <li style="box-sizing:border-box;margin-bottom:calc(12px)">
-    <span style="box-sizing:border-box;font-weight:400">Your user’s IP address</span>
+    <span style="box-sizing:border-box;font-weight:400">Your user's IP address</span>
   </li>
 </ul>
 <pre><code class="javascript">
