--- a/flutter/20.11.md
+++ b/flutter/20.11.md
@@ -1331,7 +1331,7 @@ Countly.removeDifferentAppKeysFromQueue();</code></pre>
   <li>
     Location: Comma separate latitude and longitude values, for example "56.42345,123.45325"
   </li>
-  <li>Your user’s IP address</li>
+  <li>Your user's IP address</li>
 </ul>
 <pre><code class="JavaScript">
 //setting optional parameters
