--- a/flutter/23.8.md
+++ b/flutter/23.8.md
@@ -1336,7 +1336,7 @@ Countly.reportFeedbackWidgetManually(chosenWidget, retrievedWidgetData , reporte
   Using the following call, you can set both the predefined and the custom user
   properties during initialization:
 </p>
-<pre><code class="JavaScript">var userProperties = {<br>    ‘customProperty’: ‘custom Value’,<br>    ‘username’: ‘USER_NAME’,<br>    ‘email’: ‘USER_EMAIL’<br>};<br>CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);
+<pre><code class="JavaScript">var userProperties = {<br>    'customProperty': 'custom Value',<br>    'username': 'USER_NAME',<br>    'email': 'USER_EMAIL'<br>};<br>CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);
 config.setUserProperties(userProperties); </code></pre>
 <h2 id="setting-user-profile-values-during-init" class="anchor-heading">Setting User profile values</h2>
 <p>Ther following calls can be used after init.</p>
