--- a/flutter/23.02.md
+++ b/flutter/23.02.md
@@ -1103,7 +1103,7 @@ Countly.setOnce("setOnce", 200);
 
 //insert value to array of unique values
 Countly.pushUniqueValue("type", "morning");;
-//insert value to array which can have duplocates
+//insert value to array which can have duplicates
 Countly.pushValue("type", "morning");
 //remove value from array
 Countly.pullValue("type", "morning");
