--- a/flutter/23.6.md
+++ b/flutter/23.6.md
@@ -1248,7 +1248,7 @@ Countly.instance.setOnce("setOnce", 200);
 
 //insert value to array of unique values
 Countly.instance.pushUnique("type", "morning");;
-//insert value to array which can have duplocates
+//insert value to array which can have duplicates
 Countly.instance.push("type", "morning");
 //remove value from array
 Countly.instance.pull("type", "morning");
