--- a/flutter/20.11.md
+++ b/flutter/20.11.md
@@ -1024,7 +1024,7 @@ Countly.setOnce("setOnce", 200);
 
 //insert value to array of unique values
 Countly.pushUniqueValue("type", "morning");;
-//insert value to array which can have duplocates
+//insert value to array which can have duplicates
 Countly.pushValue("type", "morning");
 //remove value from array
 Countly.pullValue("type", "morning");
