--- a/flutter/24.4.md
+++ b/flutter/24.4.md
@@ -1,5 +1,5 @@
 <p>
-  This documentation is for the Countly Flutter SDK version 24.7.X. The SDK source
+  This documentation is for the Countly Flutter SDK version 24.4.X. The SDK source
   code repository can be found
   <a href="https://github.com/Countly/countly-sdk-flutter-bridge" target="_blank" rel="noopener noreferrer">here.</a>
 </p>
@@ -25,7 +25,7 @@
   Add this to your project's <code>pubspec.yaml</code> file:
 </p>
 <pre><code class="yaml">dependencies:
-  countly_flutter: ^24.7.0
+  countly_flutter: ^24.4.0
 </code></pre>
 <p>
   After you can install packages from the command line with Flutter:
@@ -228,30 +228,26 @@ Countly.logExceptionManual("MESSAGE_STRING", nonfatal, STACK_TRACE_OBJECT, {"_fa
   Here are the detail about properties which we can use with event:
 </p>
 <ul>
-  <ul>
-    <li>
-      <code>key</code> identifies the event.
-    </li>
-    <li>
-      <code>count</code> is the number of times this event occurred.
-    </li>
-    <li>
-      <code>sum</code> is an overall numerical data set tied to an event. For
-      example, total amount of in-app purchase event.
-    </li>
-    <li>
-      <code class="dart">duration</code> is used to record and track the duration
-      of events.
-    </li>
-    <li>
-      <code>segmentation</code> is a key-value pairs, we can use
-      <code>segmentation</code> to track additional information. The only valid
-      data types are: "String", "Integer", "Double", "Boolean" and "List".
-      All other types will be ignored. In version <strong>24.7.0</strong>,
-      support for List has been added. Previous versions do not have "List"
-      support.
-    </li>
-  </ul>
+  <li>
+    <code>key</code> identifies the event.
+  </li>
+  <li>
+    <code>count</code> is the number of times this event occurred.
+  </li>
+  <li>
+    <code>sum</code> is an overall numerical data set tied to an event. For example,
+    total amount of in-app purchase event.
+  </li>
+  <li>
+    <code class="dart">duration</code> is used to record and track the duration
+    of events.
+  </li>
+  <li>
+    <code>segmentation</code> is a key-value pairs, we can use
+    <code>segmentation</code> to track additional information. The only valid
+    data types are: "String", "Integer", "Double" and "Boolean". All other types
+    will be ignored.
+  </li>
 </ul>
 <div class="callout callout--info">
   <strong>Data passed should be in UTF-8</strong>
@@ -319,14 +315,8 @@ var event = {
 };
 
 event["segmentation"] = {
-  "country": "Germany",
-  "app_version": "1.0",
-  "rating": 10,
-  "precision": 324.54678,
-  "timestamp": 1234567890,
-  "clicked": false,
-  "languages": ["en", "de", "fr"],
-  "sub_names": ["John", "Doe", "Jane"]
+  "Country": "Germany",
+  "Age": "28"
 };
 
 Countly.recordEvent(event);
@@ -342,14 +332,8 @@ var event = {
 };
 
 event["segmentation"] = {
-  "country": "Germany",
-  "app_version": "1.0",
-  "rating": 10,
-  "precision": 324.54678,
-  "timestamp": 1234567890,
-  "clicked": false,
-  "languages": ["en", "de", "fr"],
-  "sub_names": ["John", "Doe", "Jane"]
+  "Country": "Germany",
+  "Age": "28"
 };
 
 Countly.recordEvent(event);
@@ -366,14 +350,8 @@ var event = {
 };
 
 event["segmentation"] = {
-  "country": "Germany",
-  "app_version": "1.0",
-  "rating": 10,
-  "precision": 324.54678,
-  "timestamp": 1234567890,
-  "clicked": false,
-  "languages": ["en", "de", "fr"],
-  "sub_names": ["John", "Doe", "Jane"]
+  "Country": "Germany",
+  "Age": "28"
 };
 
 Countly.recordEvent(event);
@@ -414,14 +392,8 @@ Timer timer = Timer(new Duration(seconds: 5), () {
     "count": 1,
   };
   event["segmentation"] = {
-    "country": "Germany",
-    "app_version": "1.0",
-    "rating": 10,
-    "precision": 324.54678,
-    "timestamp": 1234567890,
-    "clicked": false,
-    "languages": ["en", "de", "fr"],
-    "sub_names": ["John", "Doe", "Jane"]
+    "Country": "Germany",
+    "Age": "28"
   };
   Countly.endEvent(event);
 });</code></pre>
@@ -438,14 +410,8 @@ Timer timer = Timer(new Duration(seconds: 5), () {
     "sum": "0.99"
   };
   event["segmentation"] = {
-    "country": "Germany",
-    "app_version": "1.0",
-    "rating": 10,
-    "precision": 324.54678,
-    "timestamp": 1234567890,
-    "clicked": false,
-    "languages": ["en", "de", "fr"],
-    "sub_names": ["John", "Doe", "Jane"]
+    "Country": "Germany",
+    "Age": "28"
   };
   Countly.endEvent(event);
 });</code></pre>
@@ -518,14 +484,9 @@ final String? viewID = await Countly.instance.views.<span>startAutoStoppedView</
   <span style="font-weight: 400;">You can also specify the custom segmentation key-value pairs while starting views:</span>
 </p>
 <pre><code class="dart">Map&lt;String, Object&gt; segmentation = {
-  "country": "Germany",
-  "app_version": "1.0",
-  "rating": 10,
-  "precision": 324.54678,
-  "timestamp": 1234567890,
-  "clicked": false,
-  "languages": ["en", "de", "fr"],
-  "sub_names": ["John", "Doe", "Jane"]
+  "Cats": 123,
+  "Moons": 9.98,
+  "Moose": "Deer"
 };
 
 final String? anotherViewID = Countly.instance.views.<span>startAutoStoppedView</span>("HomePage", segmentation);
@@ -543,14 +504,9 @@ final String? viewID = await Countly.instance.views.startView("Dashboard");</cod
   <span style="font-weight: 400;">You can also specify the custom segmentation key-value pairs while starting views:</span>
 </p>
 <pre><code class="dart">Map&lt;String, Object&gt; segmentation = {
-  "country": "Germany",
-  "app_version": "1.0",
-  "rating": 10,
-  "precision": 324.54678,
-  "timestamp": 1234567890,
-  "clicked": false,
-  "languages": ["en", "de", "fr"],
-  "sub_names": ["John", "Doe", "Jane"]
+  "Cats": 123,
+  "Moons": 9.98,
+  "Moose": "Deer"
 };
 
 final String? anotherViewID = Countly.instance.views.startView("HomePage", segmentation);</code></pre>
@@ -627,14 +583,9 @@ final String? anotherViewID = Countly.instance.views.startView("HomePage", segme
 await Countly.instance.views.startView(viewName);
 
 Map&lt;String, Object&gt; segmentation = {
-  "country": "Germany",
-  "app_version": "1.0",
-  "rating": 10,
-  "precision": 324.54678,
-  "timestamp": 1234567890,
-  "clicked": false,
-  "languages": ["en", "de", "fr"],
-  "sub_names": ["John", "Doe", "Jane"]
+  'Cats': 123,
+  'Moons': 9.98,
+  'Moose': 'Deer',
 };
 
 await Countly.instance.views.addSegmentationToViewWithName(viewName, segmentation);</code></pre>
@@ -644,14 +595,9 @@ await Countly.instance.views.addSegmentationToViewWithName(viewName, segmentatio
 <pre><code class="dart">String? viewID = await Countly.instance.views.startView('HomePage');
 
 Map&lt;String, Object&gt; segmentation = {
-  "country": "Germany",
-  "app_version": "1.0",
-  "rating": 10,
-  "precision": 324.54678,
-  "timestamp": 1234567890,
-  "clicked": false,
-  "languages": ["en", "de", "fr"],
-  "sub_names": ["John", "Doe", "Jane"]
+  'Cats': 123,
+  'Moons': 9.98,
+  'Moose': 'Deer',
 };
 
 await Countly.instance.views.addSegmentationToViewWithID(viewID!, segmentation);</code></pre>
@@ -1582,13 +1528,12 @@ Countly.instance.userProfile.setUserProperties(userProperties);
 Countly.instance.userProfile.save();</code></pre>
 <p>
   After you have provided the user profile information, you must save it by calling
-  <code class="dart">Countly.instance.userProfile.save()</code>. This would then
-  create a request and send it to the server.
+  <code class="dart">Countly.instance.userProfile.save()</code>. This would then create
+  a request and send it to the server.
 </p>
 <p>
   If you changed your mind and want to clear the currently prepared values, call
-  <code class="dart">Countly.instance.userProfile.clear()</code>before calling
-  "save".
+  <code class="dart">Countly.instance.userProfile.clear()</code>before calling "save".
 </p>
 <h2 id="h_01H930GAQ793MEBMSC774K6VFM">Modifying custom data</h2>
 <p>
@@ -1975,7 +1920,7 @@ await Countly.initWithConfig(config);</code></pre>
 <pre><code>CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);
 config.sdkInternalLimits.setMaxValueSize(int MAX_VALUE_SIZE);
 await Countly.initWithConfig(config);</code></pre>
-<h3 id="h_01HTF4H3507WWAHMBH7MGKW0V4">Segmentation Values</h3>
+<h3 id="h_01HTF4H3507WWAHMBH7MGKW0V4">Segmentation Value</h3>
 <p>
   Limits the amount of user set segmentation key-value pairs (default: 100 entries):
 </p>
