--- a/ios/24.4.md
+++ b/ios/24.4.md
@@ -1,5 +1,5 @@
 <p>
-  This documentation is for the Countly iOS SDK version 24.7.X. The SDK source
+  This documentation is for the Countly iOS SDK version 24.4.X. The SDK source
   code repository can be found
   <a href="https://github.com/Countly/countly-sdk-ios">here</a>.
 </p>
@@ -431,6 +431,9 @@ Countly.sharedInstance().recordError("ERROR_NAME", isFatal: true, stackTrace: Th
   </div>
 </div>
 <h2 id="h_01HAVHW0RNB7HWT8W9XRYRKBYZ">Crash Filtering</h2>
+<div class="callout callout--warning">
+  <p>This feature requires the minimum SDK version of 24.4.2</p>
+</div>
 <p>
   There might be cases where a crash could contain sensitive information. For such
   situations, there is a crash filtering option that can discard or modify a crash.
